# new-engine

./: README.md  build.sh  meson.build
custom-training/: helper.h  main.cc  meson.build  nn.cc  nn.h  optimizer.cc  optimizer.h  simd.h  trainer.cc  trainer.h
custom-training/chess/: Piece.h
src/: main.cc  meson.build  uci.cc  uci.h
src/neural/: nn.cc  nn.h  simd.h
src/search/: search.cc  search.h
src/src/: main.cc  uci.cc  uci.h
src/src/neural/: nn.cc  nn.h
src/src/search/: search.cc  search.h
src/src/tests/: NNTest.cc  TTTest.cc
src/tests/: LayerTest.cc  NNTest.cc  TTTest.cc  helper.h
src/util/: fastmath.h  uciHelper.h  version.h
training/: config.json  config_parser.py  data.py  generate.py  model.py  train.py
